fix reviews cut off issue

--- a/client/src/BusinessCard/ReviewList/Review.css
+++ b/client/src/BusinessCard/ReviewList/Review.css
@@ -10,5 +10,5 @@
 }
 .review-content{
   padding: 1%;
-
+  overflow: auto;
 }
